mobile button center aligned, stripe resubscribe fix, notification refresh fixes
Former-commit-id: 21c038488db494d7be9ce0649669867c78988d52

--- a/server/public/sass/prod_profile/profile_dashboard.scss
+++ b/server/public/sass/prod_profile/profile_dashboard.scss
@@ -27,6 +27,20 @@
   }
 }
 
+//centered icons for mobile
+.control.is-mobile {
+  @include mobile {
+    .button {
+      .icon {
+        &:first-child {
+          margin-left: 0;
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
+
 .stat-column-large {
   width: 75%;
   margin-right: 20px;
